objects/PPCommonRequestParameters__c.object
<CustomObject>
    <label>PayPal Common Request Parameters</label>
    <nameField>
        <label>PPCommonRequestParameters Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PayPal Common Request Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>FeePayer__c</fullName>
        <description>The payer of PayPal fees</description>
        <inlineHelpText>The payer of PayPal fees</inlineHelpText>
        <label>FeePayer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SENDER</fullName>
                    <default>true</default>
                    <label>SENDER</label>
                </value>
                <value>
                    <fullName>PRIMARYRECEIVER</fullName>
                </value>
                <value>
                    <fullName>EACHRECEIVER</fullName>
                </value>
                <value>
                    <fullName>SECONDARYONLY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <default>true</default>
                    <label>en_US</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DetailLevel__c</fullName>
        <description>The level of detail required by the client application for component such as Item, Transaction.</description>
        <inlineHelpText>The level of detail required by the client application for component such as Item, Transaction.</inlineHelpText>
        <label>DetailLevel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ReturnAll</fullName>
                    <default>true</default>
                    <label>ReturnAll</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrencyCode__c</fullName>
        <description>The currency code</description>
        <inlineHelpText>The currency code</inlineHelpText>
        <label>CurrencyCode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <description>Your Application&apos;s Identification, such as the name of your application.</description>
        <inlineHelpText>Your Application&apos;s Identification, such as the name of your application.</inlineHelpText>
        <label>ApplicationName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>